Fixed wrapper style 2's font color to be too light.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1785,7 +1785,7 @@
 	}
 
 	input, select, textarea {
-		color: #555;
+		color: rgb(22, 22, 22);
 	}
 
 	a {
@@ -1793,15 +1793,15 @@
 	}
 
 	strong, b {
-		color: #555;
+		color: rgb(24, 24, 24);
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #555;
+		color: rgb(24, 24, 24);
 	}
 
 	blockquote {
-		border-left-color: rgba(144, 144, 144, 0.25);
+		border-left-color: rgba(12, 12, 12, 0.25);
 	}
 
 	code {
@@ -2592,7 +2592,7 @@
 	}
 
 	header p {
-		color: rgb(37, 37, 37);
+		color: rgb(5, 5, 5);
 	}
 
 /* Table */
@@ -2905,7 +2905,7 @@
 
 		.wrapper.style2 {
 			background-color: #f2f2f2;
-			color: #a6a6a6;
+			color: #1a1a1a;
 		}
 
 			.wrapper.style2 input, .wrapper.style2 select, .wrapper.style2 textarea {
@@ -3113,7 +3113,7 @@
 
 		.wrapper.style3 {
 			background-color: #000;
-			color: #bfbfbf;
+			color: #5c5c5c;
 			background-image: url(../../images/bg.jpg);
 			background-size: cover;
 			background-attachment: fixed;
